@@ -60,7 +60,6 @@ STR_DOM_MISSIONSTRING_1202
 STR_DOM_MISSIONSTRING_1203
 STR_DOM_MISSIONSTRING_1204
 STR_DOM_MISSIONSTRING_1208
-STR_DOM_MISSIONSTRING_1209
 STR_DOM_MISSIONSTRING_1219
 STR_DOM_MISSIONSTRING_1220
 STR_DOM_MISSIONSTRING_1221
